part-3/project/manifests/services.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-project
  name: todo-project-svc
spec:
  type: LoadBalancer
  selector:
    project: todo
  ports:
    - name: frontend
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: backend
      port: 2346
      protocol: TCP
      targetPort: 3000
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
